fix: alignment of the type select

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -74,7 +74,6 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
 
   &__title {
     font-size: 4rem;
@@ -90,11 +89,13 @@ button {
 
   &__form {
     margin-top: 3em;
+    text-align: center;
   }
 
   &__label {
     display: block;
-    margin-top: 0.5em;
+    margin-top: 0.75em;
+    text-align: right;
   }
 
   &__select {
